add weekly chart

--- a/EmotionNote/Base.lproj/Main.storyboard
+++ b/EmotionNote/Base.lproj/Main.storyboard
@@ -75,7 +75,7 @@
                                     <outlet property="delegate" destination="tFP-c5-dLC" id="eWB-N8-G0Z"/>
                                 </connections>
                             </collectionView>
-                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="FJH-6O-JxD"/>
+                            <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="FJH-6O-JxD"/>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DWb-pt-fCi">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="URn-DX-6Wl"/>
